fix(cli): added an empty entrypoint as a workaround to non-empty serialization from core + AwsCli icon
closes #201
related to kestra-io/kestra#1515